--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -12,14 +12,17 @@
 
 .grass {
     background-color: #77c850;
+    background-image: url(/assets/img/folhas-contorno.png);
 }
 
 .fire {
     background-color: #ee7f30;
+    background-image: url(/assets/img/chamas.png);
 }
 
 .water {
     background-color: #678fee;
+    background-image: url(/assets/img/agua.png);
 }
 
 .electric {
@@ -87,10 +90,12 @@
 }
 
 .pokemon .number {
-    color: #000;
-    opacity: .3;
+    color: white;
+    text-shadow: .8px .8px white;
+    letter-spacing: .1rem;
+    opacity: .8;
     text-align: right;
-    font-size: .625rem;
+    font-size: .725rem;
 }
 
 .pokemon .name {
